#fixup RWD Improved responsibility for index.html using media queries. Memes stay more constant size, albo small text (vote descriptions, title description) autohide when there's no enough space. Buttons no longer float over navbar. Bootstrap messes navbar, and it's the only one thing to adjust, but may be more problematic. Also improved maintability & readability for intercations code.

--- a/styling/index-styles.css
+++ b/styling/index-styles.css
@@ -1,6 +1,6 @@
 .jumbotron h1{
     padding-left:5%;
-    text-shadow: 1px 2px white;
+    text-shadow: 1px 2px 3px darkturquoise;
 }
 
 .jumbotron h3{
@@ -11,6 +11,7 @@
     height:200px;
     width:100%;
     margin-bottom:0;
+    padding:30px;
     background-image:url("../galka.png");
     background-repeat:no-repeat;
     background-position:center bottom;
@@ -27,10 +28,48 @@
     padding-top: 60px;
 }
 
+nav.navbar{
+    z-index: 100;
+    white-space:nowrap;
+}
+
 nav li p{
     color:peachpuff;
     padding-top:1.1em;
 }
+
+@media screen and (min-width:930px) and (max-width:1040px){
+    .jumbotron h1{
+        font-size:4em;
+    }
+    .jumbotron h3{
+        font-size:1.4em;
+    }
+}
+
+@media screen and (max-width:930px){
+    .jumbotron h1{
+        font-size:3.4em;
+        padding-left:0;
+    }
+    .jumbotron h3{
+        font-size:1.3em;
+    }
+}
+
+@media screen and (max-width:820px){
+    .container-fluid div.jumbotron {
+        padding-top:20px;
+        padding-left:10px;
+    }
+}
+
+@media screen and (max-width:500px){
+    .space-hide-text {
+        display:none;
+    }
+}
+
 
 .meme-gallery{
     width:100%;
@@ -42,25 +81,40 @@ nav li p{
     align-items: center;
 }
 
-.meme-gallery .meme{
-    width:50%;
-    display:block;
-    margin-bottom:1em;
-}
-
-.meme img.img-responsive{
-    width:50%;
-    margin:auto;
-}
-
-.meme .well{
-    width:50%;
-    margin:auto;
-}
-
 .well-layout{
     display:flex;
     direction:row;
     justify-content: space-around;
 }
 
+ .meme img.img-responsive{
+    width:100%;
+    margin:auto;
+}
+
+@media screen and (min-width: 1200px){
+    .meme-gallery .meme{
+        width:25%;
+        min-width:340px;
+        display:block;
+    }
+}
+@media screen and (max-width: 1200px) and (min-width:780px){
+    .meme-gallery .meme{
+        width:28%;
+        min-width:300px;
+        display:block;
+    }
+}
+
+@media screen and (max-width: 780px){
+    
+    .meme-gallery .meme{
+        width:40%;
+        min-width:250px;
+        display:block;
+    }
+    span.space-hide-text{
+        display:none;
+    }
+}
